return List.of() from getAllMethods